# rca-labs

./: pyproject.toml
01-intro/: assignment.ipynb  lab.ipynb
02-properties/: assignment.ipynb  lab.ipynb
03-small-worlds/: assignment.ipynb  lab.ipynb
04-hubs/: lab.ipynb
04-models-hubs/: assignment.ipynb  lab.ipynb
05-communities/: assignment.ipynb  lab.ipynb
06-dynamics/: assignment.ipynb  lab.ipynb
netsci/viz/: __init__.py  communities.py  core.py
